package snakes_n_ladders_sim.simulation.mediator;

public interface Mediator {
    boolean sendMessage(Colleague colleague);
}
